@@ -32,6 +32,7 @@ protected:
   void SaveDirectoryCache(const CStdString& strDirectory, CFileItemList& items);
   void DeleteDirectoryCache();
   void DeleteRemoveableMediaDirectoryCache();
+  void DeleteDatabaseDirectoryCache();
 
   CStdString m_strPrevDir;
 };
